; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/handwired/lovelive9/keymaps/default/extr_keymap.c_check_tap_and_send_key.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/handwired/lovelive9/keymaps/default/extr_keymap.c_check_tap_and_send_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@long_tap_timer = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"KUROSAWA DIA\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"WATANABE YOU\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"TAKAMI CHIKA\00", align 1
@.str.3 = private unnamed_addr constant [18 x i8] c"KUNIKIDA HANAMARU\00", align 1
@.str.4 = private unnamed_addr constant [14 x i8] c"KUROSAWA RUBY\00", align 1
@.str.5 = private unnamed_addr constant [17 x i8] c"TSUSHIMA YOSHIKO\00", align 1
@.str.6 = private unnamed_addr constant [16 x i8] c"SAKURAUCHI RIKO\00", align 1
@.str.7 = private unnamed_addr constant [11 x i8] c"OHARA MARI\00", align 1
@.str.8 = private unnamed_addr constant [15 x i8] c"MATSUURA KANAN\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @check_tap_and_send_key(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @long_tap_timer, align 4
  %4 = icmp slt i32 %3, 500
  br i1 %4, label %5, label %26

5:                                                ; preds = %1
  %6 = load i32, i32* %2, align 4
  switch i32 %6, label %25 [
    i32 135, label %7
    i32 129, label %9
    i32 136, label %11
    i32 128, label %13
    i32 131, label %15
    i32 130, label %17
    i32 132, label %19
    i32 133, label %21
    i32 134, label %23
  ]

7:                                                ; preds = %5
  %8 = call i32 @SEND_STRING(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  br label %25

9:                                                ; preds = %5
  %10 = call i32 @SEND_STRING(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  br label %25

11:                                               ; preds = %5
  %12 = call i32 @SEND_STRING(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0))
  br label %25

13:                                               ; preds = %5
  %14 = call i32 @SEND_STRING(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.3, i64 0, i64 0))
  br label %25

15:                                               ; preds = %5
  %16 = call i32 @SEND_STRING(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.4, i64 0, i64 0))
  br label %25

17:                                               ; preds = %5
  %18 = call i32 @SEND_STRING(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.5, i64 0, i64 0))
  br label %25

19:                                               ; preds = %5
  %20 = call i32 @SEND_STRING(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.6, i64 0, i64 0))
  br label %25

21:                                               ; preds = %5
  %22 = call i32 @SEND_STRING(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.7, i64 0, i64 0))
  br label %25

23:                                               ; preds = %5
  %24 = call i32 @SEND_STRING(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.8, i64 0, i64 0))
  br label %25

25:                                               ; preds = %5, %23, %21, %19, %17, %15, %13, %11, %9, %7
  br label %26

26:                                               ; preds = %25, %1
  store i32 0, i32* @long_tap_timer, align 4
  ret void
}

declare dso_local i32 @SEND_STRING(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
